--- a/nwHacks/src/templates/post_detail.html
+++ b/nwHacks/src/templates/post_detail.html
@@ -7,15 +7,20 @@
             margin: 10px;
             float: left;
         }
+
     </style>
+    <body>
     <div class="elt">
         <ul class="list-group">
             <li class="list-group-item">Course: {{ post.course }}</li>
             <li class="list-group-item">Time: {{ post.start_time }} - {{ post.end_time }}</li>
-            <li class="list-group-item">Location:  {{ post.preferred_location }}</li>
+            <li class="list-group-item">Location:  {{ post.address }}, {{ post.city }}</li>
+            {#            <li class="list-group-item">Lat:  {{ post.lat }}</li>#}
+            {#            <li class="list-group-item">Lon:  {{ post.lon }}</li>#}
             <li class="list-group-item">Author: {{ post.author }}</li>
+            <li class="list-group-item">Contact: {{ post.phone_number }}</li>
             <li class="list-group-item">Content: {{ post.content }}</li>
-            <li class="list-group-item">Content: {{ post.timestamp }}</li>
+            <li class="list-group-item">Posted: {{ post.timestamp }}</li>
             <li class="list-group-item">Modified: {{ post.updated }}</li>
         </ul>
         {% if user.is_authenticated %}
@@ -35,8 +40,92 @@
 
     </div>
     <div class="elt">
-        MAP PLACEHOLDER
+        <div>
+            <script>
+                // Note: This example requires that you consent to location sharing when
+                // prompted by your browser. If you see the error "The Geolocation service
+                // failed.", it means you probably did not give permission for the browser to
+                // locate you.
+
+                function initMap() {
+                    var map = new google.maps.Map(document.getElementById('map'), {
+                        center: {lat: 49.2827, lng: 123.1207},
+                        zoom: 15
+                    });
+                    // Try HTML5 geolocation.
+                    if (navigator.geolocation) {
+                        navigator.geolocation.getCurrentPosition(function(position) {
+                            var pos = {
+                                lat: position.coords.latitude,
+                                lng: position.coords.longitude
+                            };
+
+
+                            var marker = new google.maps.Marker({
+                                position: pos,
+                                map: map,
+                                title: "I'm here"
+                            });
+
+                            var infowindow = new google.maps.InfoWindow({
+                                content: "You are here"});
+
+                            marker.addListener('click',function() {
+                                infowindow.open(map,marker);
+                            });
+
+                            //infoWindow.setPosition(pos);
+                            //infoWindow.setContent('Location found.');
+                            infowindow.open(map,marker);
+                            map.setCenter(pos);
+                        }, function() {
+                            handleLocationError(true, infowindow, map.getCenter());
+                        });
+                    } else {
+                        // Browser doesn't support Geolocation
+                        handleLocationError(false, infoWindow, map.getCenter());
+                    }
+
+                    plotAllGeoLocations(map)
+
+
+                }
+
+                function plotAllGeoLocations(map) {
+                    var infos = "String";
+
+                    var markerLatLng = new google.maps.LatLng({{ post.lat }}, {{ post.lon }});
+                    createMarker(markerLatLng, infos, map);
+
+                }
+
+                function createMarker(latlon, infocontent, map){
+                    var marker = new google.maps.Marker({
+                        position: latlon,
+                        map: map
+                    });
+                    var infoWindow = new google.maps.InfoWindow({
+                        content: "Posted location"
+                    });
+                    infoWindow.open(map,marker);
+                    marker.addListener('click',function() {
+                        infoWindow.open(map,marker);
+                    });
+
+                }
+
+                function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+                    infoWindow.setPosition(pos);
+                    infoWindow.setContent(browserHasGeolocation ?
+                            'Error: The Geolocation service failed.' :
+                            'Error: Your browser doesn\'t support geolocation.');
+                }
+
+            </script>
+            <script async defer
+                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8kwddcJfGsVOwcIdtVOMwsM_m6X-Ys04&signed_in=true&callback=initMap">
+            </script>
+        </div>
     </div>
-
-
+    </body>
 {% endblock content %}
