--- a/nwHacks/src/templates/logout.html
+++ b/nwHacks/src/templates/logout.html
@@ -41,7 +41,7 @@
             color: #000;
             }
             .btn-custom:hover {
-            background-color: #FF0000;
+            background-color: #3b92a1;
             }
         </style>
 
