--- a/nwHacks/src/templates/register.html
+++ b/nwHacks/src/templates/register.html
@@ -1,46 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-{#<<<<<<< HEAD#}
-{#<head><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"></head>#}
-{#<title>Register a New User</title>#}
-{#<style>#}
-{#    html, body {#}
-{#        height: 100%;#}
-{#        width: 700px;#}
-{#        margin: 0 auto;#}
-{#        padding: 75px 75px 0px 75px;#}
-{#    }#}
-{#    #map {#}
-{#        height: 100%;#}
-{#    }#}
-{#</style>#}
-{##}
-{#<body>#}
-{#<form id="register" method="post">#}
-{##}
-{#    {% csrf_token %}#}
-{##}
-{#    <div>#}
-{#        {{ form.username.errors }}#}
-{#        {{ form.username.label_tag }} {{ form.username }}#}
-{#    </div>#}
-{#    <div>#}
-{#        {{ form.password1.errors }}#}
-{#        {{ form.password1.label_tag }} {{ form.password1 }}#}
-{#    </div>#}
-{#    <div>#}
-{#        {{ form.password2.errors }}#}
-{#        {{ form.password2.label_tag }} {{ form.password2 }}#}
-{#    </div>#}
-{##}
-{#    <br/>#}
-{#    <input type="submit" name="submit" value="Register" />#}
-{#</form>#}
-{#<form action="..">#}
-{#    <input type="submit" value="Cancel">#}
-{#</form>#}
-{#=======#}
+
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
@@ -80,7 +41,7 @@
             border-radius: 8px;
             }
             .btn-custom input:hover {
-            background-color: #FF0000;
+            background-color: #3b92a1;
             }
             .form-row {
             padding-top: 20px;
@@ -120,7 +81,6 @@
         </div>
     </div>
 
-{#>>>>>>> d23ab1eda10d6c844a8cd560f510cc5a65e40992#}
 
 </body>
 </html>
