--- a/nwHacks/src/templates/base.html
+++ b/nwHacks/src/templates/base.html
@@ -112,7 +112,7 @@
                 <h3>Welcome, {{ user.username }}</h3>
                 <div class="logout-button">
                     <button class="btn-custom">
-                        <a href="logout/">Logout</a>
+                        <a href="/posts/logout/">Logout</a>
                     </button>
                 </div>
             </div>
@@ -120,10 +120,10 @@
     {% else %}
         <div class="login-reg">
             <button class="btn-custom">
-                <a href="login/">Login</a>
+                <a href="/posts/login/">Login</a>
             </button>
             <button class="btn-custom">
-                <a href="register/">Register</a>
+                <a href="/posts/register/">Register</a>
             </button>
         </div>
 
